--- a/.github /workflows/Deploy.yaml
+++ b/.github /workflows/Deploy.yaml
@@ -1,1 +1,93 @@
+name: CI Pipeline
 
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    # Step 1: Checkout code
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    # Step 2: Set up Docker
+    - name: Set up Docker
+      uses: docker/setup-buildx-action@v2
+
+    # Step 3: Build Docker image
+    - name: Build Docker image
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/backend180125:latest ./api
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend180125:latest ./ui
+   
+
+    # Step 4: Push Docker image to DockerHub
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Push Docker image
+      run: |
+        docker push ${{ secrets.DOCKER_USERNAME }}/backend180125:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/frontend180125:latest
+        #docker push ${{ secrets.DOCKER_USERNAME }}/worker:${{ github.sha }}
+  
+  deploy:
+    runs-on: self-hosted
+    needs: build
+
+    steps:
+    # Step 1: Checkout code
+    - name: Checkout code
+      uses: actions/checkout@v3
+    # Step 2: Install AWS CLI
+    #- name: Install AWS CLI
+      #run: |
+        #sudo apt-get update
+        #curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        #unzip awscliv2.zip
+        #sudo ./aws/install
+        #aws --version
+
+    # step2.1: Add the steps to connect to the EC2 instance (with docker installed)
+    - name: Set up AWS CLI
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: 'ap-northeast-1'
+        
+    - name: Update kubeconfig
+      run: aws eks update-kubeconfig --region ap-northeast-1 --name nav1801
+      env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
+    - name: Set up SSH private key
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.EC2_KEY }}" > ~/.ssh/nav18.pem
+        chmod 600 ~/.ssh/nav18.pem  # Set appropriate permissions for the private key
+        # ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+    - name: Deploy to EC2
+      
+      run: |
+          ssh -i ~/.ssh/nav18.pem ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
+            rm -rf week6_day3_deploy-a-3tier-app
+            git clone https://github.com/NavinE360/week6_day3_deploy-a-3tier-app
+            
+            cd week6_day3_deploy-a-3tier-app
+          EOF
+
+           
+    - name: Deploy to EKS
+      run: |
+          kubectl apply -f db-deploy.yaml
+          kubectl apply -f backend-deploy.yaml
+          kubectl apply -f frontend-deploy.yaml
+#tewst
