updated docker image

--- a/backend-deploy.yaml
+++ b/backend-deploy.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: backend180125:latest
+        image: navin360/backend180125:latest
         ports:
         - containerPort: 80
         env:
